<resources>
    <string name="app_name">Dendrometry</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="backButton">Back</string>
    <string name="Distance">Meters Distance</string>
    <string name="markX">X</string>
    <string name="iconDesc">Icon</string>
    <string name="titleMain">Dendrometry</string>
    <string name="menuBar">Menu</string>
    <string name="Calculate">Calculate</string>
    <string name="resetText">Reset</string>
    <string name="clear">Clear</string>
    <string name="DistanceResult">Distance:</string>
    <string name="crosshair">Crosshair Dark</string>
    <string name="start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="heightindistance">Height: 0.0m</string>

    <!--HEIGTH STRING-->
    <string name="CalculateHeight">Calculate Height</string>
    <string name="HeightText">Height</string>
    <string name="HeightResult">Height:</string>
    <string name="bottomBtn">Bottom</string>
    <string name="topBtn">Top</string>
    <string name="topbottom">"Top: \nBottom: "</string>

    <!--DIAMETER STRINGS-->
    <string name="LeftRightValue">Left: \nRight:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="DiameterResult">Diameter:</string>
    <string name="diameter">Diameter</string>
    <string name="CalculateDiameter">Calculate Diameter</string>
    <string name="apply">Apply</string>


    <!--CLASIFICATION AND VOLUME STRING-->
    <string name="Volume">V:</string>
    <string name="ViewClass">View Classification</string>
    <string name="Classification">Classification</string>
    <string name="VolumeResult">Volume:</string>
    <string name="CalcutateVolume">Calculate Volume</string>
    <string name="DiameterClass">Diameter Class:</string>
    <string name="DiameterClassData">Diameter Class:</string>
    <string name="SaveData">Save</string>
    <string name="date">date:</string>

    <string name="dclass_small_tree">Diameter Class: Small Tree</string>
    <string name="dclass_medium_sized_tree">Diameter Class: Medium-sized Tree</string>
    <string name="dclass_large_tree">Diameter Class: Large Tree</string>


    <!--    //NAVIGATION DRAVER-->
    <string name="History">History</string>
    <string name="Guide">Guide</string>
    <string name="Aboutus">About Us</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="emtytext"> </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="DistanceBtn">Distance</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="TreeSpeciesValue">Tree Species</string>
    <string name="TreeSpeciesValueData">Tree Species:</string>

    <!--  GUIDE  -->

    <string name="startapp">1. Start the App</string>
    <string name="startappguide">Tap on START to begin the Dendrometry Process</string>

<!--    LOGIN AND SIGNUP-->

    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="logout">Log out</string>


<!--    SIGNUP CREDEN-->

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="tutorial">Tutorial</string>
    <string name="Skip">Skip</string>
</resources>