<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkgreencolor"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HeightResult"
                android:textColor="@color/darkgreencolor"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

               <ImageView
                   android:id="@+id/delBtnData"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:layout_alignParentEnd="true"
                   android:src="@drawable/baseline_delete_24"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/diameterResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/DiameterResult"
            android:textColor="@color/darkgreencolor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/volumeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/VolumeResult"
            android:textColor="@color/darkgreencolor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/diameterClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/DiameterClassData"
            android:textColor="@color/darkgreencolor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateVolumeClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="textEnd"
            android:text="@string/date"
            android:textColor="@color/darkgreencolor"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.cardview.widget.CardView>