<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F5044"
    tools:context=".HeightActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cam_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_camera_fragmet" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkgreencolor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <LinearLayout-->
    <!--        android:id="@+id/toplinearLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="70dp"-->
    <!--        android:background="#2F5044"-->
    <!--        android:orientation="vertical"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:background="#2F5044"
        app:layout_constraintEnd_toEndOf="@+id/crosshairSwitch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/distanceValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/Distance"
        android:hint="@string/Distance"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/diameterStartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/diameter"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/ViewClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ViewClass"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/angleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:alpha="0.5"
        android:contentDescription="@string/iconDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitecrosshair" />


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="#2F5044"
        android:contentDescription="@string/iconDesc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:text="@string/backButton"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:srcCompat="@drawable/back_icon" />

    <Button
        android:id="@+id/bottomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bottomBtn"
        android:visibility="visible"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/angleTextView" />

    <Button
        android:id="@+id/topBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/topBtn"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/angleTextView" />

    <TextView
        android:id="@+id/heightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/HeightResult"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/CalcutateVolume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/crosshairSwitch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/crosshair"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />


    <TextView
        android:id="@+id/resultTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2F5044"
        android:lineSpacingExtra="10sp"
        android:padding="5dp"
        android:text="@string/topbottom"
        android:textAlignment="viewStart"
        android:textColor="#FCF9F9"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/distanceValue"
        app:layout_constraintStart_toStartOf="@+id/distanceValue" />

    <TextView
        android:id="@+id/DiamterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/DiameterResult"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/heightResult"
        app:layout_constraintTop_toBottomOf="@+id/heightResult" />

    <TextView
        android:id="@+id/volumeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Volume"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/DiamterValue"
        app:layout_constraintTop_toBottomOf="@+id/DiamterValue" />

    <ImageButton
        android:id="@+id/arrowButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iconDesc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleTextView"
        app:srcCompat="@drawable/baseline_arrow_circle_left_24" />

    <ImageButton
        android:id="@+id/arrowButtonRight"
        android:contentDescription="@string/iconDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleTextView"
        app:srcCompat="@drawable/baseline_arrow_circle_right_24" />


</androidx.constraintlayout.widget.ConstraintLayout>