<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:background="@color/darkgreencolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <ImageButton
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/iconDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_close_24"
            app:tint="#FFFEFE" />

        <TextView
            android:id="@+id/Classific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Classification"
            android:fontFamily="@font/bree_serif"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeDialog" />


        <TextView
            android:id="@+id/heightResult"
            android:fontFamily="@font/bree_serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/HeightResult"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Classific" />

        <TextView
            android:id="@+id/diameterResult"
            android:fontFamily="@font/bree_serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DiameterResult"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/heightResult"
            app:layout_constraintTop_toBottomOf="@+id/heightResult" />

        <TextView
            android:id="@+id/volumeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/VolumeResult"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/bree_serif"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/diameterResult"
            app:layout_constraintTop_toBottomOf="@+id/diameterResult" />

        <TextView
            android:id="@+id/diameterClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/DiameterClass"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:fontFamily="@font/bree_serif"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/volumeResult"
            app:layout_constraintTop_toBottomOf="@+id/volumeResult" />

        <TextView
            android:id="@+id/dateVolumeClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/date"
            android:fontFamily="@font/bree_serif"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/addClassification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_backgroud"
            android:text="@string/SaveData"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="267dp"
            android:layout_height="291dp"
            android:layout_marginEnd="-15dp"
            android:layout_marginBottom="-5dp"
            android:contentDescription="@string/iconDesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/dialogtreebg" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>