<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkgreencolor"
        android:orientation="vertical">

        <Button
            android:id="@+id/hBtn"
            android:layout_width="159dp"
            android:layout_height="53dp"
            android:layout_marginTop="10dp"
            android:text="@string/start"
            android:textSize="25sp"
            android:visibility="visible"
            app:cornerRadius="10sp"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <Button
            android:id="@+id/viewClassification"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginTop="15dp"
            android:text="@string/Classification"
            android:textSize="25sp"
            android:visibility="visible"
            app:cornerRadius="10sp"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/hBtn"
            app:layout_constraintStart_toStartOf="@+id/hBtn"
            app:layout_constraintTop_toBottomOf="@+id/hBtn" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="215dp"
            android:layout_height="218dp"
            android:layout_marginTop="-120dp"
            android:contentDescription="@string/iconDesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/titleMain"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>